# GremlinDesk

./: README.md  docker-compose.yml  script.py
.github/workflows/: release.yml
tauri-client/: Cargo.toml  README.md
tauri-client/src-tauri/: Cargo.toml  tauri.conf.json
tauri-client/src-tauri/icons/: icon.icns
tauri-client/ui/: index.html  main.js  style.css
